--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <!-- Redirige instantanément vers ton Apps Script -->
-  <meta http-equiv="refresh" content="0; url=TON_APPS_SCRIPT_URL">
+  <meta http-equiv="refresh" content="0; url=https://script.google.com/macros/s/AKfycbyAKWSQT7BG_RE_3BwwwT8nYXPYvOLTQo8wXymH4FdhBfEviaoBb56_B5_WRw3BwWZ4gg/exec?endpoint=scan">
   <title>Redirection Club du Cornet</title>
 </head>
 <body style="font-family:Arial,Helvetica,sans-serif; text-align:center; padding:40px;">
